--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -46,5 +46,8 @@
     <ClCompile Include="Math\Color.cpp">
       <Filter>Source\Math</Filter>
     </ClCompile>
+    <ClCompile Include="Math\Vector2.cpp">
+      <Filter>Source\Math</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
