--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -23,12 +23,18 @@
     <ClCompile Include="Actors\Enemy.cpp">
       <Filter>Source\Actors</Filter>
     </ClCompile>
+    <ClCompile Include="Actors\Projectile.cpp">
+      <Filter>Source\Actors</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actors\Player.h">
       <Filter>Source\Actors</Filter>
     </ClInclude>
     <ClInclude Include="Actors\Enemy.h">
+      <Filter>Source\Actors</Filter>
+    </ClInclude>
+    <ClInclude Include="Actors\Projectile.h">
       <Filter>Source\Actors</Filter>
     </ClInclude>
   </ItemGroup>
