--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClCompile Include="Actors\Projectile.cpp">
       <Filter>Source\Actors</Filter>
     </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actors\Player.h">
@@ -36,6 +39,9 @@
     </ClInclude>
     <ClInclude Include="Actors\Projectile.h">
       <Filter>Source\Actors</Filter>
+    </ClInclude>
+    <ClInclude Include="Game.h">
+      <Filter>Source</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
