--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -26,10 +26,13 @@
     <ClInclude Include="Base\System.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Framework\EventSystem.h" />
+    <ClInclude Include="Framework\ResourceSystem.h" />
     <ClInclude Include="Graphics\ParticleSystem.h" />
     <ClInclude Include="Graphics\Shape.h" />
     <ClInclude Include="Math\Color.h" />
     <ClInclude Include="Math\MathUtils.h" />
+    <ClInclude Include="Math\Matrix22.h" />
+    <ClInclude Include="Math\Matrix33.h" />
     <ClInclude Include="Math\Random.h" />
     <ClInclude Include="Math\Transform.h" />
     <ClInclude Include="Math\Vector2.h" />
@@ -44,6 +47,7 @@
     <ClCompile Include="Graphics\Shape.cpp" />
     <ClCompile Include="Math\Color.cpp" />
     <ClCompile Include="Math\Random.cpp" />
+    <ClCompile Include="Math\Transform.cpp" />
     <ClCompile Include="Math\Vector2.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
