--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Actors\Enemy.cpp" />
     <ClCompile Include="Actors\Player.cpp" />
     <ClCompile Include="Actors\Projectile.cpp" />
+    <ClCompile Include="Actors\RoomBlock.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
@@ -164,6 +165,7 @@
     <ClInclude Include="Actors\Enemy.h" />
     <ClInclude Include="Actors\Player.h" />
     <ClInclude Include="Actors\Projectile.h" />
+    <ClInclude Include="Actors\RoomBlock.h" />
     <ClInclude Include="Game.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
